--- a/contact.html
+++ b/contact.html
@@ -7,33 +7,38 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    
-    <section class="contact">
-        <div class="contact-info">
-            <h1>Contact Brutiv</h1>
-            <p>Email: <a href="mailto:shefkiberisha75@gmail.com">shefkiberisha75@gmail.com</a></p>
-        </div>
-        <div class="social-links">
-            <h2>Connect with Me:</h2>
-            <ul>
-                <li>
-                    <a href="https://github.com/brutiv" target="_blank">
-                        <img src="images/github.png" alt="GitHub" width="30" height="30">
-                        GitHub
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </section>
+    <div id="loading-screen">
+        <div id="background-image"></div>
+    </div>
+    <div id="content">
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        
+        <section class="contact">
+            <div class="contact-info">
+                <h1>Contact Brutiv</h1>
+                <p>Email: <a href="mailto:shefkiberisha75@gmail.com">shefkiberisha75@gmail.com</a></p>
+            </div>
+            <div class="social-links">
+                <h2>Connect with Me:</h2>
+                <ul>
+                    <li>
+                        <a href="https://github.com/brutiv" target="_blank">
+                            <img src="images/github.png" alt="GitHub" width="30" height="30">
+                            GitHub
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
