--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brutiv</title>
     <link rel="stylesheet" href="styles.css">
+    <meta content="Brutiv" property="og:title" />
+    <meta content="Discord Bot Developer" property="og:description" />
+    <meta content="https://brutiv.github.io/Portfolio" property="og:url" />
+    <meta content="#6a2675" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
     <div id="loading-screen">
