--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta content="Brutiv" property="og:title" />
     <meta content="Discord Bot Developer" property="og:description" />
     <meta content="https://brutiv.github.io/Portfolio" property="og:url" />
+    <meta content="./images/background.jpg" property="og:image" />
     <meta content="#6a2675" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
