--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="loading-screen">
-        <div id="background-image"></div>
-    </div>
-    <div id="content">
+    <div class="wrapper">
         <header>
+            <div class="logo">Brutiv</div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -20,24 +18,20 @@
                 </ul>
             </nav>
         </header>
-        
-        <section class="contact">
-            <div class="contact-info">
-                <h1>Contact Brutiv</h1>
+
+        <main>
+            <section class="contact">
+                <h1>Get in Touch</h1>
                 <p>Email: <a href="mailto:shefkiberisha75@gmail.com">shefkiberisha75@gmail.com</a></p>
-            </div>
-            <div class="social-links">
-                <h2>Connect with Me:</h2>
-                <ul>
-                    <li>
-                        <a href="https://github.com/brutiv" target="_blank">
-                            <img src="images/github.png" alt="GitHub" width="30" height="30">
-                            GitHub
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </section>
+                <div class="social">
+                    <h2>Find me online</h2>
+                    <ul>
+                        <li><a href="https://github.com/brutiv" target="_blank">GitHub</a></li>
+                        <li><a href="https://guns.lol/brutiv" target="_blank">Guns.lol</a></li>
+                    </ul>
+                </div>
+            </section>
+        </main>
     </div>
     <script src="index.js"></script>
 </body>
