--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brutiv</title>
     <link rel="stylesheet" href="styles.css">
-    <meta content="Brutiv" property="og:title" />
-    <meta content="Discord Bot Developer" property="og:description" />
-    <meta content="https://brutiv.github.io/Portfolio" property="og:url" />
-    <meta content="#6a2675" data-react-helmet="true" name="theme-color" />
+    <link rel="icon" href="images/B.png" type="image/jpeg" />
+    <meta content="Brutiv" property="og:title">
+    <meta content="Discord Bot Developer" property="og:description">
+    <meta content="https://brutiv.github.io/Portfolio" property="og:url">
+    <meta content="#00b8d9" name="theme-color">
 </head>
 <body>
-    <div id="loading-screen">
-        <div id="background-image"></div>
-    </div>
-    <div id="content">
+    <div class="wrapper">
         <header>
+            <div class="logo">Brutiv</div>
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
@@ -24,21 +23,49 @@
                 </ul>
             </nav>
         </header>
-        
-        <section id="home" class="hero">
-            <div class="hero-content">
-                <h1>Hi, I'm Brutiv</h1>
-                <p>Welcome to my portfolio. Explore my projects and skills.</p>
-            </div>
-        </section>
-        
-        <section id="projects" class="projects">
-                <a href="projects.html" class="project-link"><h2>Project 1: Spectra</h2></a>
-                <p>Discord Moderation and Utility Bot, made extremely well, and updated almost daily.</p>
-            </div>
-        </section>
+
+        <main>
+            <section id="home" class="hero">
+                <h1>Hi there, I'm Brutiv</h1>
+                <p>Crafting advanced Discord bots and digital solutions. Dive into my work below.</p>
+            </section>
+
+    <section id="about-me" class="hero">
+        <h1>About Me</h1>
+
+        <div class="about-line">
+            I'm Brutiv, a 15-year-old Discord bot developer and tech enthusiast from Kosovo.
+        </div>
+
+        <div class="about-line">
+            I specialize in creating powerful moderation, utility, and entertainment systems for Discord communities. With a strong focus on efficiency, performance, and user experience, I’ve built bots like Spectra and Validex, both designed to help servers run smoothly and securely.
+        </div>
+
+        <div class="about-line">
+            I’m constantly learning and improving—whether with Python and Node.js, exploring web development to craft polished dashboards and experiences.
+        </div>
+
+        <div class="about-line">
+            Beyond bots, I’m interested in system design, and automation, I like using MongoDB and discord.py, sometimes discord.js.
+        </div>
+
+        <div class="about-line">
+            Even though I'm still in high school, I take my work seriously and aim to deliver high-quality projects. My drive comes from a passion for solving problems, improving communities, and pushing myself to build better tools every day.
+        </div>
+
+        <div class="about-line">
+            If you're into bots, automation, or just creating cool stuff, let’s connect.
+        </div>
+    </section>
+
+            <section class="projects-overview">
+                <div class="project-card">
+                    <h2><a href="projects.html">My Projects</a></h2>
+                    <p>View all my projects.</p>
+                </div>
+            </section>
+        </main>
     </div>
     <script src="index.js"></script>
-
 </body>
 </html>
