--- a/projects.html
+++ b/projects.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="content">
+    <div class="wrapper">
         <header>
+            <div class="logo">Brutiv</div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -17,12 +18,27 @@
                 </ul>
             </nav>
         </header>
-        
-        <section class="projects">
-            <div class="project">
-                <h2><a href="https://top.gg/bot/1279512390756470836">Project 1: Spectra</a></h2>
-                <p>Discord Moderation and Utility Bot, made extremely well, and updated almost daily.</p>
-        </section>
+
+        <main>
+            <section class="projects-list">
+                <div class="project-card">
+                    <h2><a href="https://spectrabot.pages.dev">Spectra</a></h2>
+                    <p>Powerful Utility and Moderation Bot.</p>
+                </div>
+            </section>
+            <section class="projects-list">
+                <div class="project-card">
+                    <h2><a href="https://validex.pages.dev">Validex [BETA]</a></h2>
+                    <p>Powerful Moderation Bot With Advanced Features.</p>
+                </div>
+            </section>
+            <section class="projects-list">
+                <div class="project-card">
+                    <h2><a href="https://github.com/veldora-s-verification">Veldora [DISCONTINUED]</a></h2>
+                    <p>Advanced Captcha Verification Bot.</p>
+                </div>
+            </section>
+        </main>
     </div>
     <script src="index.js"></script>
 </body>
