--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Brutiv</title>
+    <title>Contact - Brutiv</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="robots" content="noindex">
+    <meta name="theme-color" content="#000000">
 </head>
 <body>
     <div class="wrapper">
         <header>
-            <div class="logo">Brutiv</div>
+            <div class="logo">B</div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -20,15 +22,32 @@
         </header>
 
         <main>
-            <section class="contact">
-                <h1>Get in Touch</h1>
-                <p>Email: <a href="mailto:shefkiberisha75@gmail.com">shefkiberisha75@gmail.com</a></p>
-                <div class="social">
-                    <h2>Find me online</h2>
-                    <ul>
-                        <li><a href="https://github.com/brutiv" target="_blank">GitHub</a></li>
-                        <li><a href="https://guns.lol/brutiv" target="_blank">Guns.lol</a></li>
-                    </ul>
+            <section id="contact" class="contact">
+                <h1>Contact Me</h1>
+                <div class="lead">Open for commissions and collaborations.</div>
+
+                <div class="project-links">
+                    <a class="button" href="mailto:shefkiberisha75@gmail.com" aria-label="Email">Reach Out, I Don't Bite</a>
+                </div>
+
+                <div class="feature-grid">
+                    <div class="feature-card">
+                        <h3>Links</h3>
+                        <p><a href="https://github.com/brutiv" target="_blank">GitHub</a></p>
+                        <p><a href="projects.html">Projects</a></p>
+                        <p><a href="stats.html">Stats</a></p>
+                    </div>
+                    <div class="feature-card">
+                        <h3>Skills</h3>
+                        <p>Python</p>
+                        <p>Node.js</p>
+                        <p>MongoDB</p>
+                    </div>
+                </div>
+
+                <div class="subtle-heading">Availability</div>
+                <div class="project-card">
+                    <p>Replies within 48 hours. Open to paid work and short collaborations.</p>
                 </div>
             </section>
         </main>
