--- a/index.html
+++ b/index.html
@@ -3,66 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brutiv</title>
+    <title>Brutiv - Developer</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="images/B.png" type="image/jpeg" />
     <meta content="Brutiv" property="og:title">
-    <meta content="Discord Bot Developer" property="og:description">
-    <meta content="https://brutiv.github.io/Portfolio" property="og:url">
-    <meta content="#00b8d9" name="theme-color">
+    <meta content="Developer" property="og:description">
+    <meta content="https://brutiv.pages.dev/" property="og:url">
+    <meta content="#000000" name="theme-color">
 </head>
 <body>
     <div class="wrapper">
         <header>
-            <div class="logo">Brutiv</div>
+            <div class="logo">B</div>
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
                     <li><a href="projects.html">Projects</a></li>
+                    <li><a href="stats.html">Stats</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
 
         <main>
-            <section id="home" class="hero">
-                <h1>Hi there, I'm Brutiv</h1>
-                <p>Crafting advanced Discord bots and digital solutions. Dive into my work below.</p>
+            <section id="work">
+                <h1>Active Projects</h1>
+                <div class="project-card">
+                    <h2><a href="spectra.html">Spectra</a></h2>
+                    <p>Discord management system used by 360+ servers</p>
+                    <p class="stats">Python · MongoDB · 38k+ users</p>
+                </div>
+                <div class="project-card">
+                    <h2><a href="validex.html">Validex</a></h2>
+                    <p>Moderation bot with used by 40+ servers</p>
+                    <p class="stats">Python · MongoDB · In Beta</p>
+                </div>
             </section>
 
-    <section id="about-me" class="hero">
-        <h1>About Me</h1>
-
-        <div class="about-line">
-            I'm Brutiv, a 15-year-old Discord bot developer and tech enthusiast from Kosovo.
-        </div>
-
-        <div class="about-line">
-            I specialize in creating powerful moderation, utility, and entertainment systems for Discord communities. With a strong focus on efficiency, performance, and user experience, I’ve built bots like Spectra and Validex, both designed to help servers run smoothly and securely.
-        </div>
-
-        <div class="about-line">
-            I’m constantly learning and improving—whether with Python and Node.js, exploring web development to craft polished dashboards and experiences.
-        </div>
-
-        <div class="about-line">
-            Beyond bots, I’m interested in system design, and automation, I like using MongoDB and discord.py, sometimes discord.js.
-        </div>
-
-        <div class="about-line">
-            Even though I'm still in high school, I take my work seriously and aim to deliver high-quality projects. My drive comes from a passion for solving problems, improving communities, and pushing myself to build better tools every day.
-        </div>
-
-        <div class="about-line">
-            If you're into bots, automation, or just creating cool stuff, let’s connect.
-        </div>
-    </section>
-
-            <section class="projects-overview">
-                <div class="project-card">
-                    <h2><a href="projects.html">My Projects</a></h2>
-                    <p>View all my projects.</p>
+            <section id="experience">
+                <h1>Experience</h1>
+                <div class="about-line">
+                    4 years building amazing Discord bots
                 </div>
+                <div class="about-line">
+                    Python backend development
+                </div>
+                <div class="about-line">
+                    MongoDB database management
+                </div>
+            </section>
+
+            <section id="metrics">
+                <h1>Impact</h1>
+                <div class="about-line">38,000+ total users</div>
+                <div class="about-line">400+ servers</div>
+                <div class="about-line">99% uptime on all bots</div>
             </section>
         </main>
     </div>
