--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brutiv's Projects</title>
+    <title>Projects - Brutiv</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="index.html#work">Work</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -23,19 +23,19 @@
             <section class="projects-list">
                 <div class="project-card">
                     <h2><a href="https://spectrabot.pages.dev">Spectra</a></h2>
-                    <p>Powerful Utility and Moderation Bot.</p>
+                    <p>Server management system</p>
                 </div>
             </section>
             <section class="projects-list">
                 <div class="project-card">
-                    <h2><a href="https://validex.pages.dev">Validex [BETA]</a></h2>
-                    <p>Powerful Moderation Bot With Advanced Features.</p>
+                    <h2><a href="https://validex.pages.dev">Validex</a></h2>
+                    <p>Server moderation system</p>
                 </div>
             </section>
             <section class="projects-list">
                 <div class="project-card">
-                    <h2><a href="https://github.com/veldora-s-verification">Veldora [DISCONTINUED]</a></h2>
-                    <p>Advanced Captcha Verification Bot.</p>
+                    <h2><a href="https://github.com/veldora-s-verification">Veldora</a></h2>
+                    <p>Captcha Verification system</p>
                 </div>
             </section>
         </main>
