--- a/validex.html
+++ b/validex.html
@@ -12,7 +12,7 @@
             <div class="logo">B</div>
             <nav>
                 <ul>
-                    <li><a href="stats.html">Stats</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#work">Work</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
