--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <div class="logo">Brutiv</div>
+            <div class="logo">B</div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
