Updated servers and users count

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                 <div class="project-card">
                     <h2><a href="spectra.html">Spectra</a></h2>
                     <p>Discord management system used by 360+ servers</p>
-                    <p class="stats">Python · MongoDB · 38k+ users</p>
+                    <p class="stats">Python · MongoDB · 40k+ users</p>
                 </div>
                 <div class="project-card">
                     <h2><a href="validex.html">Validex</a></h2>
-                    <p>Moderation bot with used by 40+ servers</p>
-                    <p class="stats">Python · MongoDB · In Beta</p>
+                    <p>Moderation bot with used by 50+ servers</p>
+                    <p class="stats">Python · MongoDB · 3,500+</p>
                 </div>
             </section>
 
