--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 <h1>Active Projects</h1>
                 <div class="project-card">
                     <h2><a href="spectra.html">Spectra</a></h2>
-                    <p>Discord management system used by 370+ servers</p>
-                    <p class="stats">Python · MongoDB · 40k+ users</p>
+                    <p>Discord management system used by 390+ servers</p>
+                    <p class="stats">Python · MongoDB · 39k+ users</p>
                 </div>
                 <div class="project-card">
                     <h2><a href="validex.html">Validex</a></h2>
                     <p>Moderation bot with used by 50+ servers</p>
-                    <p class="stats">Python · MongoDB · 3,500+</p>
+                    <p class="stats">Python · MongoDB · 5,000+ users</p>
                 </div>
             </section>
 
@@ -53,7 +53,7 @@
 
             <section id="metrics">
                 <h1>Impact</h1>
-                <div class="about-line">38,000+ total users</div>
+                <div class="about-line">44,000+ total users</div>
                 <div class="about-line">400+ servers</div>
                 <div class="about-line">99% uptime on all bots</div>
             </section>
