--- a/index.html
+++ b/index.html
@@ -505,12 +505,8 @@
             background: linear-gradient(90deg, #ff6b6b, #ff9f9f);
         }
 
-        #cpp-bar {
-            background: linear-gradient(90deg, #4facfe, #00f2fe);
-        }
-
-        #csharp-bar {
-            background: linear-gradient(90deg, #43e97b, #38f9d7);
+        #javascript-bar {
+            background: linear-gradient(90deg, #f0db4f, #f7e967);
         }
 
         
