--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@
         </div>
 
 
-        <div id="results-button-container" class="hidden">
+        <div id="results-button-container">
             <button id="results-theme">View Results</button>
             <div id="results-hint" class="hidden">Click again to return to profile</div>
         </div>
